--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -3,23 +3,8 @@
   margin: 40px auto;
 }
 
-.card-grid {
-  margin-top: 40px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin-bottom: 1.5em;
-}
-
-.small-card-grid {
-  margin-top: 40px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin-bottom: 1.5em;
-}
-
 .Header {
+  max-width: 860px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -28,7 +13,7 @@
 .Reset {
   width: 45px;
   height: auto;
-  margin-right: 0.8em;
+  margin-right: 0.7em;
   cursor: pointer;
 }
 
@@ -38,10 +23,4 @@
   stroke-width: 18px;
   stroke-dasharray: 2, 2;
   stroke-linejoin: round;
-}
-
-@media only screen and (min-width: 768px) {
-  .card-grid {
-    grid-template-columns: repeat(4, 1fr);
-  }
 }
